[gd_scene load_steps=62 format=2]

[ext_resource path="res://assets/character/adventurer-swrd-drw-01.png" type="Texture" id=1]
[ext_resource path="res://assets/character/adventurer-run-05.png" type="Texture" id=2]
[ext_resource path="res://assets/character/adventurer-swrd-drw-00.png" type="Texture" id=3]
[ext_resource path="res://assets/character/adventurer-swrd-shte-03.png" type="Texture" id=4]
[ext_resource path="res://assets/character/adventurer-swrd-drw-02.png" type="Texture" id=5]
[ext_resource path="res://assets/character/adventurer-swrd-shte-02.png" type="Texture" id=6]
[ext_resource path="res://assets/character/adventurer-swrd-drw-03.png" type="Texture" id=7]
[ext_resource path="res://assets/character/adventurer-swrd-shte-00.png" type="Texture" id=8]
[ext_resource path="res://assets/character/adventurer-swrd-shte-01.png" type="Texture" id=9]
[ext_resource path="res://assets/character/adventurer-idle-00.png" type="Texture" id=10]
[ext_resource path="res://assets/character/adventurer-idle-01.png" type="Texture" id=11]
[ext_resource path="res://assets/character/adventurer-idle-2-01.png" type="Texture" id=12]
[ext_resource path="res://assets/character/adventurer-run-02.png" type="Texture" id=13]
[ext_resource path="res://assets/character/adventurer-run-01.png" type="Texture" id=14]
[ext_resource path="res://assets/character/adventurer-run-00.png" type="Texture" id=15]
[ext_resource path="res://assets/character/adventurer-run-03.png" type="Texture" id=16]
[ext_resource path="res://assets/character/adventurer-run-04.png" type="Texture" id=17]
[ext_resource path="res://assets/character/adventurer-idle-02.png" type="Texture" id=18]
[ext_resource path="res://assets/character/adventurer-idle-03.png" type="Texture" id=19]
[ext_resource path="res://assets/character/adventurer-idle-2-03.png" type="Texture" id=20]
[ext_resource path="res://assets/character/adventurer-idle-2-00.png" type="Texture" id=21]
[ext_resource path="res://assets/character/adventurer-idle-2-02.png" type="Texture" id=22]
[ext_resource path="res://Player.gd" type="Script" id=23]
[ext_resource path="res://assets/character/adventurer-jump-01.png" type="Texture" id=24]
[ext_resource path="res://assets/character/adventurer-jump-02.png" type="Texture" id=25]
[ext_resource path="res://assets/character/adventurer-jump-03.png" type="Texture" id=26]
[ext_resource path="res://assets/character/adventurer-jump-00.png" type="Texture" id=27]
[ext_resource path="res://assets/character/adventurer-die-01.png" type="Texture" id=28]
[ext_resource path="res://assets/character/adventurer-die-00.png" type="Texture" id=29]
[ext_resource path="res://assets/character/adventurer-die-05.png" type="Texture" id=30]
[ext_resource path="res://assets/character/adventurer-die-03.png" type="Texture" id=31]
[ext_resource path="res://assets/character/adventurer-die-06.png" type="Texture" id=32]
[ext_resource path="res://assets/character/adventurer-die-04.png" type="Texture" id=33]
[ext_resource path="res://assets/character/adventurer-die-02.png" type="Texture" id=34]
[ext_resource path="res://assets/character/adventurer-attack2-00.png" type="Texture" id=35]
[ext_resource path="res://assets/character/adventurer-attack2-02.png" type="Texture" id=36]
[ext_resource path="res://assets/character/adventurer-attack2-05.png" type="Texture" id=37]
[ext_resource path="res://assets/character/adventurer-attack2-03.png" type="Texture" id=38]
[ext_resource path="res://assets/character/adventurer-attack2-01.png" type="Texture" id=39]
[ext_resource path="res://assets/character/adventurer-attack2-04.png" type="Texture" id=40]
[ext_resource path="res://assets/character/adventurer-attack3-00.png" type="Texture" id=41]
[ext_resource path="res://assets/character/adventurer-attack3-01.png" type="Texture" id=42]
[ext_resource path="res://assets/character/adventurer-attack3-02.png" type="Texture" id=43]
[ext_resource path="res://assets/character/adventurer-air-attack2-01.png" type="Texture" id=44]
[ext_resource path="res://assets/character/adventurer-air-attack2-02.png" type="Texture" id=45]
[ext_resource path="res://assets/character/adventurer-attack1-00.png" type="Texture" id=46]
[ext_resource path="res://assets/character/adventurer-attack1-02.png" type="Texture" id=47]
[ext_resource path="res://assets/character/adventurer-attack1-04.png" type="Texture" id=48]
[ext_resource path="res://assets/character/adventurer-attack1-01.png" type="Texture" id=49]
[ext_resource path="res://assets/character/adventurer-attack1-03.png" type="Texture" id=50]
[ext_resource path="res://assets/character/adventurer-air-attack1-02.png" type="Texture" id=51]
[ext_resource path="res://assets/character/adventurer-attack3-04.png" type="Texture" id=52]
[ext_resource path="res://assets/character/adventurer-air-attack1-03.png" type="Texture" id=53]
[ext_resource path="res://assets/character/adventurer-attack3-03.png" type="Texture" id=54]
[ext_resource path="res://assets/character/adventurer-attack3-05.png" type="Texture" id=55]
[ext_resource path="res://assets/character/adventurer-air-attack1-01.png" type="Texture" id=56]
[ext_resource path="res://assets/character/adventurer-air-attack2-00.png" type="Texture" id=57]
[ext_resource path="res://assets/character/adventurer-air-attack1-00.png" type="Texture" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 58 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 53 ) ],
"loop": false,
"name": "airattack1",
"speed": 15.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": false,
"name": "airattack2",
"speed": 15.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 48 ) ],
"loop": false,
"name": "attack1",
"speed": 15.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 37 ) ],
"loop": false,
"name": "attack2",
"speed": 15.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 54 ), ExtResource( 52 ), ExtResource( 55 ) ],
"loop": false,
"name": "attack3",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle_no_sword",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 32 ) ],
"loop": false,
"name": "kneel",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "sword_draw",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "sword_sheathe",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "unkneel",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 12.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 16.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.5 )
shape = SubResource( 2 )

[node name="TransformTimer" type="Timer" parent="."]
wait_time = 2.55
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="SwordHitbox" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitbox"]
position = Vector2( 14.5, 1.5 )
shape = SubResource( 3 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="TransformTimer" to="." method="_on_TransformTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
